--- a/package.json
+++ b/package.json
@@ -22,8 +22,23 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@tezign/foundation-common": "^2.0.6",
+    "ahooks": "^3.7.6",
+    "antd": "^5.4.1",
+    "axios": "^1.3.5",
+    "classnames": "^2.3.2",
+    "commons.js": "^1.3.83",
+    "immer": "^9.0.21",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-markdown": "^8.0.6",
+    "react-router-dom": "^6.10.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -35,12 +50,14 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/ui": "^0.29.8",
     "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -49,7 +66,10 @@
     "eslint-plugin-tailwindcss": "^3.11.0",
     "happy-dom": "^9.1.9",
     "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^11.2.2",
     "prettier": "2.8.7",
+    "sass": "^1.61.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
