--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@ant-design/icons": "^5.0.1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@tezign/foundation-common": "^2.0.6",
+    "@tezign/tenant-config": "^2.0.1",
+    "@types/react-transition-group": "^4.4.5",
     "ahooks": "^3.7.6",
     "antd": "^5.4.1",
     "axios": "^1.3.5",
+    "axios-extensions": "^3.1.6",
     "classnames": "^2.3.2",
     "commons.js": "^1.3.83",
     "immer": "^9.0.21",
@@ -38,6 +41,7 @@
     "react-markdown": "^8.0.6",
     "react-router-dom": "^6.10.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-transition-group": "^4.4.5",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
