--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "sass": "^1.61.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
+    "unplugin-auto-import": "^0.15.3",
     "vite": "^4.2.1",
     "vite-tsconfig-paths": "^4.0.8",
     "vitest": "^0.29.8"
