--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build:test": "pnpm run build",
     "serve": "vite preview",
     "test": "vitest",
@@ -25,6 +25,8 @@
     "axios-extensions": "^3.1.6",
     "classnames": "^2.3.2",
     "commons.js": "^1.3.83",
+    "github-markdown-css": "^5.2.0",
+    "highlight.js": "^11.7.0",
     "immer": "^9.0.21",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
@@ -34,6 +36,10 @@
     "react-router-dom": "^6.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5",
+    "rehype-highlight": "^6.0.0",
+    "rehype-raw": "^6.1.1",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
@@ -41,6 +47,9 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
+    "@iconify-json/mdi": "^1.1.50",
+    "@svgr/core": "^7.0.0",
+    "@svgr/plugin-jsx": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^18.15.11",
@@ -69,6 +78,7 @@
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
     "unplugin-auto-import": "^0.15.3",
+    "unplugin-icons": "^0.16.1",
     "vite": "^4.2.1",
     "vite-tsconfig-paths": "^4.0.8",
     "vitest": "^0.29.8"
