--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highlight.js": "^11.7.0",
     "immer": "^9.0.21",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
